<resources>
    <string name="app_name">Amazon Login Page</string>
    <string name="instructionText"><![CDATA[Sign in to <b>Zappos.com</b> using your Amazon account]]></string>
    <string name="signInText">Sign in</string>
    <string name="forgotPasswordText">Forgot password?</string>
    <string name="emailTextHint">Email (phone for mobile accounts)</string>
    <string name="passwordTextHint">Amazon password</string>
</resources>