<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/amazon_bg"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:padding="10dp"
        android:src="@drawable/amazon_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/instructionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="4dp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:text="@string/instructionText"
                android:textAlignment="center"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/signInText"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgotPasswordText"
                    android:textColor="@color/amazon_blue"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/border"
                >

                <EditText
                    android:id="@+id/emailText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/emailTextHint"
                    android:autofillHints="Email"
                    android:textSize="16sp"
                    tools:ignore="TextFields"
                    android:padding="15dp"
                    android:background="@android:color/transparent"
                    />
                <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintTop_toBottomOf="@id/logo" />

                <EditText
                    android:id="@+id/passwordText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/passwordTextHint"
                    android:autofillHints="Password"
                    android:textSize="16sp"
                    android:padding="15dp"
                    android:background="@android:color/transparent"
                    />

            </LinearLayout>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Show password"
                android:textSize="16sp"
                android:checked="true"
                android:layout_marginTop="15dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Keep me signed in. "
                    android:textSize="16sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Details"
                    android:textColor="@color/amazon_blue"
                    android:textSize="16sp" />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sign in"
                android:layout_marginVertical="15dp"
                android:textColor="@android:color/black"
                android:backgroundTint="@color/amazon_yellow"
                app:cornerRadius="5dp"
                app:strokeColor="@android:color/darker_gray"
                app:strokeWidth="1.5dp"
                />
            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toBottomOf="@id/logo"
                android:layout_marginTop="25dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="New to Amazon?"
                android:textSize="14sp"
                android:textColor="@android:color/darker_gray"
                android:layout_marginTop="-13dp"
                android:paddingHorizontal="15dp"
                android:background="@color/amazon_bg"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Create a new Amazon account"
                android:layout_marginVertical="15dp"
                android:textColor="@android:color/black"
                android:backgroundTint="@color/amazon_light"
                app:cornerRadius="5dp"
                app:strokeColor="@android:color/darker_gray"
                app:strokeWidth="1.5dp"
                />

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toBottomOf="@id/logo"
                android:layout_marginHorizontal="50dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Conditions of Use Privacy Notice"
                android:textColor="@color/amazon_blue"
                android:textSize="12sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="© 1996-2017. amazon.com, Inc. or its affilates"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>